# MediaAuditOrganizer

./: .gitignore  ALPHA_RECOVERY_COMPLETE.md  BUILD_REPORT.md  CHECKPOINT_SYSTEM_READY.md  CLAIM_TICKET_IMPLEMENTATION.md  DECISION_LOG_20260303.md  EMAIL_DRAFT.md  FOLDER_STRUCTURE.md  GPU_ENFORCEMENT_REPORT.md  GPU_NOT_FOUND_ALERT.md  INSTRUCTIONS FOR MEDIA INJEST.md  MEDIAAUDIT_TEST_PLAN.md  NEXTSTEPS_COMPLETE.md  PDF_CONVERSION.md  PHASE2_COMPLETE.md  PLANNING_REPORT_20260303.md  PROJECT_PLAN.md  QUICK_START.md  README.md  STATUS.md  SUBAGENT_ORCHESTRATION_PLAN.md  UPDATED_PROJECT_PLAN.md  config_review.md  diff_src.txt  env_status.json  hardware_detection_result.json  snapshot_good_ui.html  start.sh  vercel.json
.axiom_catalog/: README.md
.claude/: settings.local.json
03_PROJECTS/: README.md
04_CATALOGS/: README.md
06_METADATA/: db_init_log.json  init_schema.sql  shadow_manifest_20260304.json  shadow_manifest_TASK_20260304_003103_CHECKPOINT_SENTINEL_0003.json  sidecar_manifest_20260304.csv
07_LOGS/: GUI_TEST_REPORT_20260304.md
08_REPORTS/: 00_INCOMING_ANALYSIS_20260304.md  HEARTBEAT_PROTOCOL_IMPLEMENTATION.md  backup_setup_20260304.md  capacity_status_20260304.html  duplicates_20260303.html  preflight_20260304.json  reconciliation_prep_20260304.md
agents/: agent_1_scout_results.md  agent_2_plan.md  agent_3_optimizations.md
configs/: backup.yaml  rename_rules.yaml  settings.yaml
gui/: .vercelignore  (+7 more)
gui/src-tauri/: Cargo.toml
gui/src-tauri/capabilities/: default.json
gui/src-tauri/icons/: icon.icns
gui/src-tauri/src/: lib.rs  main.rs
(+580 files in other folders)
